Updating configuration using circuit breaker config value and exit on critical error

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+#COMPOSE_PROJECT_NAME=ams-project
 AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP=YOUR_DNS_NAME_OR_IP
 TAG=master
 CULTURE_CODE=de-DE
@@ -6,8 +7,12 @@ ERP_MAIN_VERSION=11
 
 # connections
 AMS_DB=Server=DB_SERVER;Database=AMS_DB_NAME;User ID=projectuser;Password=projectuser;Max Pool Size=100
-IDENTITY_ACCESS_DB=Server=DB_SERVER;IDENTITY_DB_NAME;User ID=projectuser;Password=projectuser;Max Pool Size=100
+IDENTITY_ACCESS_DB=Server=DB_SERVER;Database=IDENTITY_DB_NAME;User ID=projectuser;Password=projectuser;Max Pool Size=100
 #EVENTSTORE_DB=tcp://admin:changeit@eventstore:1111
+
+#nservicebus
+#SERVICE_BUS_TIME_TO_WAIT_BEFORE_TRIGGERING_CIRCUIT_BREAKER=120
+#EXIT_ON_CRITICAL_ERROR=false
 
 # email settings
 MAIL_SERVER=MAIL_SERVER
@@ -16,3 +21,12 @@ MAIL_SENDER_NAME=ENTER_YOUR_SENDER_NAME
 MAIL_SENDER=ENTER_YOUR_SENDER_ADRESS
 MAIL_PASSWORD=ENTER_YOUR_PASSWORD_IF_REQUIRED
 MAIL_IS_AUTHENTICATION_REQUIRED=false
+
+# email proxy
+#MAIL_PROXY_TYPE=None
+#Supported proxy types: NONE, HTTP, SOCKS4, SOCKS4A, SOCKS5
+#MAIL_PROXY_HOST=proxy.ams.local
+#MAIL_PROXY_PORT=25
+#MAIL_PROXY_IS_AUTHENTICATION_REQUIRED=True
+#MAIL_PROXY_USERNAME=proxyuser
+#MAIL_PROXY_PASSWORD=proxypassword
